# cpp-systems-drills

./: .gitignore  CMakeLists.txt  CMakePresets.json
scripts/: callgrind.sh  debug_build.sh
src/: ScopeExit.h  unique_fd.h
tests/: start.txt  test_unique_fd.cpp  test_unique_fd.h
